tests/regression/error/undef_var1.lus
node test2() returns (ok :  bool);
var y :  bool;
let
  y = true -> pre true;
  ok = true;
tel

node test() returns ();
var ok, x :  bool;
let
  ok = true;
tel
